[package]
name = "p2panda-net"
version = "0.5.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "glyph <glyph@mycelial.technology>",
]
description = "Data-type-agnostic p2p networking, discovery, gossip and local-first sync"
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["p2p", "local-first", "sync", "gossip", "discovery"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = [
  "address_book",
  "iroh_endpoint",
  "iroh_mdns",
  "discovery",
  "gossip",
  "sync",
]
address_book = [
  "dep:p2panda-store",
]
iroh_endpoint = [
  "address_book",
  "dep:iroh",
  "dep:iroh-base",
]
iroh_mdns = [
  "iroh_endpoint",
  "iroh/address-lookup-mdns",
]
discovery = [
  "address_book",
  "iroh_endpoint",
  "dep:p2panda-discovery",
]
gossip = [
  "address_book",
  "iroh_endpoint",
  "dep:iroh-gossip",
]
sync = [
  "address_book",
  "iroh_endpoint",
  "gossip",
  "dep:p2panda-store",
  "dep:p2panda-sync",
]
supervisor = []
test_utils = [
  "dep:tracing-subscriber",
]

[dependencies]
ciborium = "0.2.2"
futures-channel = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
iroh = { version = "0.96.1", default-features = false, optional = true }
iroh-base = { version = "0.96.1", optional = true }
iroh-gossip = { version = "0.96.0", optional = true }
p2panda-core = { path = "../p2panda-core", version = "0.5.0" }
p2panda-discovery = { path = "../p2panda-discovery", version = "0.5.0", features = ["test_utils"], optional = true }
p2panda-store = { path = "../p2panda-store", version = "0.5.0", optional = true }
p2panda-sync = { path = "../p2panda-sync", version = "0.5.0", optional = true }
ractor = "0.15.8"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["rt", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["codec", "compat"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"], optional = true }

[dev-dependencies]
anyhow = "1.0.100"
assert_matches = "1.5.0"
clap = { version = "4.5.54", features = ["derive"] }
futures-test = "0.3.31"
mock_instant = "0.6.0"
p2panda-net = { path = ".", features = ["test_utils"] }
p2panda-sync = { path = "../p2panda-sync", features = ["test_utils"] }
tokio = { version = "1.47.1", features = ["rt", "sync", "time"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
