[package]
name = "p2panda-net"
version = "0.6.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "glyph <glyph@mycelial.technology>",
]
description = "Data-type-agnostic p2p networking, discovery, gossip and local-first sync"
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["p2p", "local-first", "sync", "gossip", "discovery"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = [
  "address_book",
  "iroh_endpoint",
  "iroh_mdns",
  "discovery",
  "gossip",
  "sync",
]
address_book = [
  "p2panda-store/macros",
  "p2panda-store/sqlite",
]
iroh_endpoint = [
  "address_book",
  "dep:iroh",
]
iroh_mdns = [
  "iroh_endpoint",
  "iroh/address-lookup-mdns",
]
discovery = [
  "address_book",
  "iroh_endpoint",
  "dep:p2panda-discovery",
]
gossip = [
  "address_book",
  "iroh_endpoint",
  "dep:iroh-gossip",
]
sync = [
  "address_book",
  "iroh_endpoint",
  "gossip",
  "dep:p2panda-sync",
]
supervisor = []
test_utils = [
  "default",
  "supervisor",
  "dep:tracing-subscriber",
  "p2panda-core/test_utils",
  "p2panda-store/test_utils",
  "p2panda-discovery/test_utils",
]

[dependencies]
ciborium = { workspace = true }
futures-channel = "0.3.31"
futures-util = { workspace = true, default-features = true }
hex =  { workspace = true }
iroh = { version = "0.98.2", default-features = false, features = ["tls-ring"], optional = true }
iroh-base = { version = "0.98.0", features = ["key"] }
iroh-gossip = { version = "0.98.0", optional = true }
p2panda-core = { workspace = true, default-features = true }
p2panda-discovery = { workspace = true, default-features = true, optional = true }
p2panda-store = { workspace = true }
p2panda-sync = { workspace = true, default-features = true, optional = true }
ractor = "0.15.8"
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, default-features = true, features = ["rt", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["codec", "compat"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

[dev-dependencies]
anyhow = "1.0.100"
assert_matches = "1.5.0"
clap = { version = "4.5.54", features = ["derive"] }
futures-test = "0.3.31"
mock_instant = "0.6.0"
p2panda-discovery = { workspace = true, default-features = true, features = ["test_utils"] }
p2panda-net = { path = ".", features = ["test_utils"] }
p2panda-store = { workspace = true, default-features = true, features = ["test_utils"] }
p2panda-sync = { workspace = true, default-features = true, features = ["test_utils"] }
tokio = { workspace = true, default-features = true, features = ["rt", "sync", "time", "signal"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
