[package]
name = "p2panda-node"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
p2panda-client = { path = "../p2panda-client", version = "0.4.0" }
p2panda-core = { path = "../p2panda-core", version = "0.4.0" }
p2panda-discovery = { path = "../p2panda-discovery", version = "0.4.0" }
p2panda-net = { path = "../p2panda-net", version = "0.4.0" }
p2panda-stream = { path = "../p2panda-stream", version = "0.4.0" }
p2panda-sync = { path = "../p2panda-sync", version = "0.4.0" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["rt"] }

[lints]
workspace = true
