[package]
name = "p2panda-rs"
version = "0.4.0"
authors = [
  "sophiiistika <sophiiistika@mailbox.org>",
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "cafca <cafca@001.land>",
  "pietgeursen <pietgeursen@gmail.com>",
]
edition = "2018"
description = "All the things a panda needs"
repository = "https://github.com/p2panda/p2panda"
license = "AGPL-3.0-or-later"
readme = "README.md"
exclude = [".gitignore"]
categories = ["web-programming", "wasm", "cryptography"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test-utils = ["dep:rstest", "dep:rstest_reuse", "dep:varu64", "dep:tokio"]
secret-group = ["dep:openmls", "dep:openmls_memory_keystore", "dep:openmls_rust_crypto", "dep:openmls_traits", "dep:tls_codec"]

[dependencies]
arrayvec = "^0.5.2"
async-trait = "^0.1.56"
bamboo-rs-core-ed25519-yasmf = "^0.1.1"
ciborium = "^0.2.0"
ed25519-dalek = "^1.0.1"
hex = { version = "^0.4.3", features = ["serde"] }
lazy_static = "^1.4.0"
lipmaa-link = "^0.2.2"
log = "^0.4.17"
openmls = { version = "^0.4.1", features = ["crypto-subtle"], optional = true }
openmls_memory_keystore = { version = "^0.1.0", optional = true }
openmls_rust_crypto = { version = "^0.1.0", optional = true }
openmls_traits = { version = "^0.1.0", optional = true }
regex = "^1.5.6"
rstest = { version = "^0.15.0", optional = true }
rstest_reuse = { version = "^0.3.0", optional = true }
serde = { version = "^1.0.137", features = ["derive"] }
serde_repr = "^0.1.8"
thiserror = "^1.0.31"
tls_codec = { version = "^0.2.0", features = ["derive", "serde_serialize"], optional = true }
tokio = { version = "1.19.2", features = [ "rt", "macros", "rt-multi-thread" ], optional = true }
varu64 = { version = "^0.7.0", default-features = false, optional = true }
yasmf-hash = "^0.1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "^0.7.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "^0.1.7"
js-sys = "^0.3.58"
rand = { version = "^0.7.3", features = ["wasm-bindgen"] }
serde-wasm-bindgen = "^0.4.3"
wasm-bindgen = "^0.2.82"

[dev-dependencies]
criterion = "^0.3.5"
ctor = "^0.1.22"
incremental-topo = "^0.1.2"
openmls = { version = "^0.4.1", features = ["crypto-subtle", "test-utils"] }
pretty_env_logger = "^0.4.0"
rstest = "^0.15.0"
rstest_reuse = "^0.3.0"
tokio = { version = "1.19.2", features = ["rt", "macros", "rt-multi-thread"] }
varu64 = { version = "^0.7.0", default-features = false }
wasm-bindgen-test = "^0.3.31"

[[bench]]
name = "graph"
harness = false
path = "benchmarks/graph.rs"

[[bench]]
name = "encode_decode"
harness = false
path = "benchmarks/encode_decode.rs"
