[package]
name = "p2panda-rs"
version = "0.4.0"
authors = [
  "sophiiistika <sophiiistika@mailbox.org>",
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "cafca <cafca@001.land>",
  "pietgeursen <pietgeursen@gmail.com>",
]
edition = "2018"
description = "All the things a panda needs"
repository = "https://github.com/p2panda/p2panda"
license = "AGPL-3.0-or-later"
readme = "README.md"
exclude = [".gitignore"]
categories = ["web-programming", "wasm", "cryptography"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test-utils = ["storage-provider", "dep:rstest", "dep:rstest_reuse", "dep:varu64", "dep:tokio", "dep:async-trait"]
secret-group = ["dep:openmls", "dep:openmls_memory_keystore", "dep:openmls_rust_crypto", "dep:openmls_traits", "dep:tls_codec"]
storage-provider = ["dep:async-trait"]

[dependencies]
arrayvec = "^0.5.2"
async-trait = { version = "^0.1.57", optional = true }
bamboo-rs-core-ed25519-yasmf = "^0.1.1"
ciborium = "^0.2.0"
ed25519-dalek = "^1.0.1"
hex = { version = "^0.4.3", features = ["serde"] }
lipmaa-link = "^0.2.2"
log = "^0.4.17"
once_cell = "^1.13.1"
openmls = { version = "^0.4.1", features = ["crypto-subtle"], optional = true }
openmls_memory_keystore = { version = "^0.1.0", optional = true }
openmls_rust_crypto = { version = "^0.1.0", optional = true }
openmls_traits = { version = "^0.1.0", optional = true }
rand = "^0.7.3"
regex = "^1.6.0"
rstest = { version = "^0.15.0", optional = true }
rstest_reuse = { version = "^0.3.0", optional = true }
serde = { version = "^1.0.143", features = ["derive"] }
thiserror = "^1.0.32"
tls_codec = { version = "^0.2.0", features = ["derive", "serde_serialize"], optional = true }
tokio = { version = "^1.20.1", features = [ "rt", "macros", "rt-multi-thread" ], optional = true }
varu64 = { version = "^0.7.0", default-features = false, optional = true }
yasmf-hash = "^0.1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "^0.1.7"
js-sys = "^0.3.59"
rand = { version = "^0.7.3", features = ["wasm-bindgen"] }
serde-wasm-bindgen = "^0.4.3"
wasm-bindgen = "^0.2.82"

[dev-dependencies]
async-trait = "^0.1.56"
criterion = "^0.3.5"
ctor = "^0.1.23"
incremental-topo = "^0.1.2"
openmls = { version = "^0.4.1", features = ["crypto-subtle", "test-utils"] }
pretty_env_logger = "^0.4.0"
rstest = "^0.15.0"
rstest_reuse = "^0.3.0"
tokio = { version = "^1.20.1", features = ["rt", "macros", "rt-multi-thread"] }
varu64 = { version = "^0.7.0", default-features = false }
wasm-bindgen-test = "^0.3.31"

[[bench]]
name = "graph"
harness = false
path = "benchmarks/graph.rs"

[[bench]]
name = "encode_decode"
harness = false
path = "benchmarks/encode_decode.rs"
