[package]
name = "p2panda-store-next"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["memory", "sqlite"]
memory = []
sqlite = [
  "dep:p2panda-core",
  "dep:sqlx",
  "dep:thiserror",
]

[dependencies]
p2panda-core = { path = "../p2panda-core", version = "0.4.0", optional = true, default-features = false }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"], optional = true }
thiserror = { version = "2.0.16", optional = true }
