[package]
name = "p2panda-store-next"
version = "0.5.1"
edition = "2024"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["sqlite", "macros"]
sqlite = [
  "dep:p2panda-core",
  "dep:serde",
  "dep:sqlx",
  "dep:thiserror",
  "dep:tokio",
]
macros = []
test_utils = [
  "dep:rand",
  "dep:rand_chacha",
  "sqlite",
]

[dependencies]
p2panda-core = { path = "../p2panda-core", version = "0.5.1", optional = true, default-features = false }
rand = { version = "0.10.0", optional = true }
rand_chacha = { version = "0.10.0", optional = true }
serde = { version = "1.0.228", optional = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"], optional = true }
thiserror = { version = "2.0.16", optional = true }
tokio = { version = "1.47.1", features = ["sync"], optional = true }

[dev-dependencies]
futures-test = "0.3.31"
p2panda-core = { path = "../p2panda-core", version = "0.5.1", default-features = false, features = ["test_utils"] }
p2panda-store-next = { path = ".", features = ["test_utils"] }
tokio = { version = "1.47.1", features = ["rt", "macros"] }
