[package]
name = "p2panda-store"
version = "0.4.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "glyph <glyph@mycelial.technology>",
]
description = "Store traits and implementations"
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["sqlite", "storage"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["memory"]
memory = []
sqlite = ["dep:ciborium", "dep:sqlx", "dep:hex"]
test_utils = ["dep:rand"]

[dependencies]
ciborium = { version = "0.2.2", optional = true }
hex = { version = "0.4.3", optional = true }
p2panda-core = { path = "../p2panda-core", version = "0.4.0" }
rand = { version = "0.8.5", optional = true }
sqlx = { version = "0.8.3", optional = true, features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0.12"
trait-variant = "0.1.2"

[dev-dependencies]
rand = "0.8.5"
serde = "1.0.219"
tokio = { version = "1.44.2", features = ["rt", "macros"] }
