[package]
name = "p2panda-store"
version = "0.5.2"
edition = "2024"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = [
  "sqlite",
  "macros",
]
sqlite = [
  "dep:serde",
  "dep:sqlx",
  "dep:thiserror",
  "dep:tokio",
]
macros = []
test_utils = [
  "dep:rand",
  "dep:rand_chacha",
  "sqlite",
]

[dependencies]
p2panda-core = { workspace = true }
rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"], optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync"], optional = true }

[dev-dependencies]
futures-test = "0.3.31"
p2panda-core = { workspace = true, features = ["test_utils"] }
p2panda-store = { workspace = true, features = ["test_utils"] }
tokio = { workspace = true, features = ["rt", "macros"] }
