[package]
name = "p2panda-store"
version = "0.7.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "glyph <glyph@mycelial.technology>",
]
description = "Database traits and SQLite implementations for p2panda"
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["local-first", "p2p", "database", "sqlite", "transactions"]
rust-version = "1.96"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = [
  "sqlite",
  "macros",
]
sqlite = [
  "dep:serde",
  "dep:sqlx",
  "dep:thiserror",
  "dep:tokio",
]
encryption = [
  "dep:p2panda-encryption",
  "sqlite",
]
groups = [
  "dep:p2panda-auth",
  "sqlite",
]
spaces = [
  "sqlite",
  "groups",
  "encryption",
]
processor = [
  "sqlite"
]
macros = []
test_utils = [
  "dep:rand",
  "dep:rand_chacha",
  "sqlite",
]

[dependencies]
p2panda-auth = { workspace = true, default-features = false, features = ["serde"], optional = true }
p2panda-core = { workspace = true }
p2panda-encryption = { workspace = true, default-features = true, optional = true }
rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"], optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, default-features = true, features = ["sync"], optional = true }

[dev-dependencies]
futures-test = { workspace = true }
p2panda-core = { workspace = true, features = ["test_utils"] }
p2panda-store = { path = ".", features = ["test_utils"] }
tokio = { workspace = true, default-features = true, features = ["rt", "macros"] }
