[package]
name = "p2panda-sync-next"
version = "0.1.0"
edition = "2024"

[features]
default = []
test_utils = ["dep:rand"]

[dependencies]
ciborium = "0.2.2"
futures = "0.3.31"
futures-util = "0.3.31"
p2panda-core = { path = "../p2panda-core", version = "0.4.0" }
p2panda-store = { path = "../p2panda-store", version = "0.4.0" }
serde = "1.0.228"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "io-util"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["codec", "compat"] }
rand = { version = "0.9.2", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
tokio = { version = "1.47.1", features = ["rt", "macros", "net", "io-util"] }
rand = "0.9.2"

[lints]
workspace = true
