[package]
name = "p2panda-sync-next"
version = "0.4.0"
edition = "2024"

[features]
default = []
test_utils = ["dep:rand"]

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
p2panda-core = { path = "../p2panda-core", version = "0.4.0" }
p2panda-store = { path = "../p2panda-store", version = "0.4.0" }
rand = { version = "0.9.2", optional = true }
serde = "1.0.228"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "sync"] }

[dev-dependencies]
assert_matches = "1.5.0"
tokio = { version = "1.47.1", features = ["rt", "macros", "net", "sync", "time"] }
rand = "0.9.2"

[lints]
workspace = true
