[package]
name = "p2panda-sync"
version = "0.6.1"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "glyph <glyph@mycelial.technology>",
]
description = "Local-first sync for append-only logs and traits to build your own"
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["p2p", "local-first", "sync", "replication"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = []
test_utils = [
  "dep:rand",
  "dep:tracing-subscriber",
  "p2panda-store/test_utils",
]

[dependencies]
futures = "0.3.31"
futures-util = { workspace = true, default-features = true }
p2panda-core = { workspace = true, default-features = true }
p2panda-store = { workspace = true, default-features = true }
pin-project-lite = "0.2.16"
rand = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, default-features = true, features = ["macros", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
p2panda-store = { workspace = true, default-features = true, features = ["test_utils"] }
rand = { workspace = true }
tokio = { workspace = true, default-features = true, features = ["time", "rt", "macros", "sync"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
