[package]
name = "p2panda"
version = "0.7.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "glyph <glyph@mycelial.technology>",
]
description = "Out-of-the-box p2panda API for application developers"
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["p2p", "local-first", "sync", "event-sourcing"]
rust-version = "1.96"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = []
test_utils = [
  "dep:tracing-subscriber",
]

[dependencies]
futures-util = { workspace = true }
p2panda-auth = { workspace = true, default-features = true }
p2panda-core = { workspace = true, default-features = true }
p2panda-encryption = { workspace = true, default-features = true, features = ["test_utils"] }
p2panda-net = { workspace = true, default-features = true }
p2panda-spaces = { workspace = true, default-features = true }
p2panda-store = { workspace = true, default-features = true, features = ["processor", "spaces"]}
p2panda-stream = { workspace = true, default-features = true, features = ["ingest", "log_prune", "orderer", "spaces"] }
p2panda-sync = { workspace = true, default-features = true }
pin-project = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
static_assertions.workspace = true
thiserror = { workspace = true }
tokio = { workspace = true, default-features = true, features = ["sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
mock_instant = { workspace = true }
p2panda = { path = ".", features = ["test_utils"] }
p2panda-core = { workspace = true, default-features = true, features = ["test_utils"] }
p2panda-store = { workspace = true, default-features = true, features = ["test_utils"] }
tokio = { workspace = true, default-features = true, features = ["macros", "rt"] }
